--- a/Larynx.html
+++ b/Larynx.html
@@ -49,7 +49,7 @@
   </nav>
 
 <!-- Contenu principal -->
-  <p>Page Cancer du Larynx</p>
+  <p>Page Cancer du Larynx en travaux</p>
 
   <script src="js/app.js"></script>
 
