--- a/Qui_sommes_nous.html
+++ b/Qui_sommes_nous.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!-- Add your site or application content here -->
-  <p>Page Qui sommes nous ?</p>
+  <p>Page Qui sommes nous ? en travaux</p>
   <script src="js/app.js"></script>
 
 </body>
