--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!-- Add your site or application content here -->
-  <p>Page Contactez-nous</p>
+  <p>Page Contactez-nous en travaux</p>
   <script src="js/app.js"></script>
 
 </body>
