--- a/Qui_sommes_nous.html
+++ b/Qui_sommes_nous.html
@@ -1,57 +1,101 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-  <title>Mutilés de la voix - Qui sommes nous ?</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Qui sommes nous ?</title>
+  <link rel="stylesheet" href="css/quiSommesNous.css">
+  <script src="dyn.js" defer></script>
 </head>
-
 <body>
-  <!-- Div avec Logo ( lien vers page d'accueil + titre de l'association -->
-  <div class="custom-div d-flex align-items-center" style="height: 100px; margin-bottom: 10px; padding: 0 15px;">
+
+<nav class="navbar">
+  <div class="navbar-logo ">
     <a href="accueil.html">
-      <img src="img/logo-association.png" alt="Logo" style="height: 100px; margin-right: 10px; margin-top: 10px">
+    <img src="img/logo-association.png" alt="Logo">
     </a>
-    <p style="margin-top: 25px; font-size: 2em">Union des associations françaises de laryngectomisés et mutilés de la voix</p>
   </div>
-  <!-- Barre de navigation -->
-  <nav class="navbar navbar-expand-sm   navbar-light bg-light custom-navbar">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="containerBouton">
+    <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
+    <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
+    <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
+  </div>
+</nav>
 
-    <div class="collapse navbar-collapse" id="navBar">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="accueil.html">Accueil</a>
-        </li>
-        <li style="" class="nav-item">
-          <a class="nav-link" href="Qui_sommes_nous.html">Qui sommes nous ?</a>
-        </li>
-        <li class="nav-item dropdown dmenu">
-          <a class="nav-link dropdown-toggle" href="Larynx.html" id="navbardrop" data-toggle="dropdown">
-            Le Cancer du Larynx
-          </a>
-          <div class="dropdown-menu sm-menu">
-            <a class="dropdown-item" href="faire_don.html">Faire un don</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contactez-nous</a>
-        </li>
-      </ul>
+
+<div class="spacer"></div>
+
+
+<section class="container">
+  <div class="text-content">
+    <h1>Qui sommes nous ?</h1>
+
+    <p>
+      Groupement d’associations d’anciens malades guéris d’un cancer, l’UNION est concernée par
+      une population atteinte d’une affection « orpheline » méconnue des organismes officiels du
+      fait de son importance réduite. Selon les données de l’INCa (Institut national du cancer),
+      3 220 laryngectomies totales ont été pratiquées en 2017, dont 2 746 chez les hommes et 474
+      chez les femmes (soit environ 15 %).
+    </p>
+    <button id="enSP">En Savoir Plus</button>
+  </div>
+
+  <div class="image-container">
+    <img src="img/photoEquipe.png" alt="photo" class="photoEquipe">
+  </div>
+
+</section>
+
+<div id="aDecouvrir">voici le texte cache kz,flza,fklelf,eklafefkefk
+  elkfekfkenfklejkfjnezkjfnkezjnfknkfznkgnskngkngkngknnngggggggggggggggggggggggggggggggg
+  ggggggggggggggggggggggggggggggggggggggnkjhhkhhihhogggggggggggggggg</div>
+
+<section class="containerChiffre">
+  <div class="num" data-value="3220">000</div>
+  <div class="num" data-value="3400">000</div>
+  <div class="num" data-value="3400">000</div>
+</section>
+
+<h1 class="second-title">Nos Missions</h1>
+
+
+<section class="container2">
+
+  <button class="circle1" data-paragraphe="innfo VISITE HOPITAL NSJNCJQNCJKQNJCDCC">
+    <div class="icon">
+      <img src="img/pharmacie.png" alt="Croix médicale">
     </div>
-  </nav>
+    <span class="text">VISITES A L’HOPITAL</span>
+  </button>
 
-  <!-- Add your site or application content here -->
-  <p>Page Qui sommes nous ? en travaux</p>
-  <script src="js/app.js"></script>
+  <button class="circle2" data-paragraphe="info  CENTRE DE REEDUCATIONSKJJFOIAJFJDI">
+    <div class="icon">
+      <img src="img/rehabilitation%20(1).png" alt=">Centre rééducation">
+    </div>
+    <span class="text">VISITES AU CENTRE DE REEDUCATION</span>
+  </button>
+
+  <button class="circle3" data-paragraphe="INFO VISTTE DOMICIOJZIJFOIZIFJCFIFC">
+    <div class="icon">
+      <img src="img/accueil.png" alt="Visites Domicile">
+    </div>
+    <span class="text">VISITES A DOMICILE</span>
+  </button>
+
+  <button class="circle4" data-paragraphe="INFO RENCOCDNZIFCNDIZCHDIZHIQZJ">
+    <div class="icon">
+      <img src="img/espace-reserve.png" alt="Rencontres">
+    </div>
+    <span class="text">RENCONTRE DANS 100 LIEUX DE PERMANENCE</span>
+  </button>
+
+</section>
+
+<section class="container3">
+  <div id="output"></div>
+</section>
+
+
 
 </body>
-
 </html>
