--- a/accueil.html
+++ b/accueil.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-
-
+  <script src="dyn.js" defer></script>
 </head>
 
 <body>
@@ -27,27 +26,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navBar">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="accueil.html">Accueil</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link" href="Qui_sommes_nous.html">Qui sommes nous ?</a>
-          </li>
-          <li class="nav-item dropdown dmenu">
-            <a class="nav-link dropdown-toggle" href="Larynx.html" id="navbardrop" data-toggle="dropdown">
-              Le Cancer du Larynx
-            </a>
-            <div class="dropdown-menu sm-menu">
-              <a class="dropdown-item" href="faire_don.html">Faire un don</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contactez-nous</a>
-          </li>
-      </ul>
-    </div>
+      <div class="containerBouton">
+        <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
+        <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
+        <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
+      </div>
   </nav>
 
 
