--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
 
 <head>
   <title>Mutilés de la voix - Contactez-nous</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
@@ -13,30 +13,87 @@
 </head>
 
 <body>
-  <!-- Div avec Logo ( lien vers page d'accueil + titre de l'association -->
-  <div class="custom-div d-flex align-items-center" style="height: 100px; margin-bottom: 10px; padding: 0 15px;">
-    <a href="accueil.html">
-      <img src="img/logo-association.png" alt="Logo" style="height: 100px; margin-right: 10px; margin-top: 10px">
-    </a>
-    <p style="margin-top: 25px; font-size: 2em">Union des associations françaises de laryngectomisés et mutilés de la voix</p>
+<!-- Div avec Logo (lien vers page d'accueil) + titre de l'association -->
+<div class="custom-div d-flex align-items-center" style="height: 100px; margin-bottom: 10px; padding: 0 15px;">
+  <a href="accueil.html">
+    <img src="img/logo-association.png" alt="Logo" style="height: 100px; margin-right: 10px; margin-top: 10px">
+  </a>
+  <p style="margin-top: 25px; font-size: 2em">Union des associations françaises de laryngectomisés et mutilés de la voix</p>
+</div>
+
+<!-- Barre de navigation -->
+<nav class="navbar navbar-expand-sm navbar-light bg-light custom-navbar">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="containerBouton">
+    <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
+    <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
+    <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
   </div>
-  <!-- Barre de navigation -->
-  <nav class="navbar navbar-expand-sm   navbar-light bg-light custom-navbar">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+</nav>
 
-    <div class="containerBouton">
-      <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
-      <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
-      <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
+<!-- Section Contact -->
+<main>
+  <section class="contact-header text-center">
+    <h1>Contactez-nous</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </section>
+
+  <section class="contact-info container my-5">
+    <div class="row">
+      <!-- Informations de contact -->
+      <div class="col-md-6 contact-details">
+        <h2>Restez en contact</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+        <div class="info-item my-3">
+          <i class="fa fa-map-marker fa-lg" style="color: #00bfff;"></i>
+          <p><strong>Adresse</strong><br>6 rue des lilas, Paris</p>
+        </div>
+
+        <div class="info-item my-3">
+          <i class="fa fa-phone fa-lg" style="color: #00bfff;"></i>
+          <p><strong>Numéro de téléphone</strong><br>+33 767154366</p>
+        </div>
+
+        <div class="info-item my-3">
+          <i class="fa fa-envelope fa-lg" style="color: #00bfff;"></i>
+          <p><strong>E-Mail</strong><br>adresse.email@gmail.com</p>
+        </div>
+
+        <div class="social-media mt-4">
+          <p>Abonnez-vous :</p>
+          <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+          <a href="#"><i class="fa fa-instagram fa-lg mx-2"></i></a>
+          <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
+        </div>
+      </div>
+
+      <!-- Formulaire de contact -->
+      <div class="col-md-6 contact-form">
+        <h2>Envoyer un message</h2>
+        <form action="#" method="post">
+          <div class="form-group">
+            <input type="text" name="nom" class="form-control" placeholder="Nom" required>
+          </div>
+          <div class="form-group">
+            <input type="email" name="email" class="form-control" placeholder="Adresse e-mail" required>
+          </div>
+          <div class="form-group">
+            <textarea name="message" class="form-control" rows="5" placeholder="Message" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Envoyer</button>
+        </form>
+      </div>
     </div>
-  </nav>
+  </section>
+</main>
 
-  <!-- Add your site or application content here -->
-  <p>Page Contactez-nous en travaux</p>
-  <script src="js/app.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
