--- a/Qui_sommes_nous.html
+++ b/Qui_sommes_nous.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Qui sommes nous ?</title>
   <link rel="stylesheet" href="css/quiSommesNous.css">
+  <link rel="stylesheet" href="css/Navbar.css">
   <script src="dyn.js" defer></script>
 </head>
 <body>
@@ -12,10 +13,11 @@
 <nav class="navbar">
   <div class="navbar-logo ">
     <a href="accueil.html">
-    <img src="img/logo-association.png" alt="Logo">
+      <img src="img/logo-association.png" alt="Logo">
     </a>
   </div>
   <div class="containerBouton">
+    <button class="navBouton" onclick="window.location.href='accueil.html';">Accueil</button>
     <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
     <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
     <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
