--- a/accueil.html
+++ b/accueil.html
@@ -23,19 +23,19 @@
   </div>
   -->
   <!-- Barre de navigation -->
-    <nav class="navbar">
-      <div class="navbar-logo ">
-        <a href="accueil.html">
-          <img src="img/logo-association.png" alt="Logo">
-        </a>
-      </div>
-      <div class="containerBouton">
-        <button class="navBouton" onclick="window.location.href='accueil.html';">Accueil</button>
-        <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
-        <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
-        <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
-      </div>
-    </nav>
+<nav class="navbar">
+  <div class="navbar-logo ">
+    <a href="accueil.html">
+      <img src="img/logo-association.png" alt="Logo">
+    </a>
+  </div>
+  <div class="containerBouton">
+    <button class="navBouton1" onclick="window.location.href='accueil.html';">Accueil</button>
+    <button class="navBouton2" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
+    <button class="navBouton3" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
+    <button class="navBouton4" onclick="window.location.href='contact.html';">Contactez-nous</button>
+  </div>
+</nav>
 
 
 <!-- Div avec vidéo YouTube et texte -->
