--- a/Qui_sommes_nous.html
+++ b/Qui_sommes_nous.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Qui sommes nous ?</title>
+  <title>Mutilés de la voix - Qui sommes nous ?</title>
   <link rel="stylesheet" href="css/quiSommesNous.css">
   <link rel="stylesheet" href="css/Navbar.css">
   <script src="dyn.js" defer></script>
@@ -17,10 +17,10 @@
     </a>
   </div>
   <div class="containerBouton">
-    <button class="navBouton" onclick="window.location.href='accueil.html';">Accueil</button>
-    <button class="navBouton" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
-    <button class="navBouton" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
-    <button class="navBouton" onclick="window.location.href='contact.html';">Contactez-nous</button>
+    <button class="navBouton1" onclick="window.location.href='accueil.html';">Accueil</button>
+    <button class="navBouton2" onclick="window.location.href='Qui_sommes_nous.html';">Qui sommes nous ?</button>
+    <button class="navBouton3" onclick="window.location.href='Larynx.html';">Le cancer du larynx</button>
+    <button class="navBouton4" onclick="window.location.href='contact.html';">Contactez-nous</button>
   </div>
 </nav>
 
