--- a/Larynx.html
+++ b/Larynx.html
@@ -5,7 +5,7 @@
   <title>Mutilés de la voix - Le Cancer du Larynx</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/Larynx.css">
   <link rel="stylesheet" href="css/Navbar.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,6 +29,7 @@
     <button class="navBouton4" onclick="window.location.href='contact.html';">Contactez-nous</button>
   </div>
 </nav>
+
 <!-- Contenu principal -->
   <p>Page Cancer du Larynx en travaux</p>
 
