--- a/Qui_sommes_nous.html
+++ b/Qui_sommes_nous.html
@@ -6,6 +6,8 @@
   <title>Mutilés de la voix - Qui sommes nous ?</title>
   <link rel="stylesheet" href="css/quiSommesNous.css">
   <link rel="stylesheet" href="css/Navbar.css">
+
+
   <script src="dyn.js" defer></script>
 </head>
 <body>
@@ -61,7 +63,7 @@
 <h1 class="second-title">Nos Missions</h1>
 
 
-<section class="container2">
+<section class="containerCircles">
 
   <button class="circle1" data-paragraphe="innfo VISITE HOPITAL NSJNCJQNCJKQNJCDCC">
     <div class="icon">
