CSS pour la page sur le larynx

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,8 @@
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/Navbar.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-  <script src="dyn.js" defer></script>
+
+
 </head>
 
 <body>
@@ -44,25 +43,23 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
         <div class="info-item my-3">
-          <i class="fa fa-map-marker fa-lg" style="color: #00bfff;"></i>
-          <p><strong>Adresse</strong><br>6 rue des lilas, Paris</p>
+          <img></img>
+          <p><strong>Adresse</strong><br>181 avenue Daumesnil 75012 PARIS</p>
         </div>
 
         <div class="info-item my-3">
-          <i class="fa fa-phone fa-lg" style="color: #00bfff;"></i>
-          <p><strong>Numéro de téléphone</strong><br>+33 767154366</p>
+          <img></img>
+          <p><strong>Numéro de téléphone</strong><br>01 42 33 16 86</p>
         </div>
 
         <div class="info-item my-3">
-          <i class="fa fa-envelope fa-lg" style="color: #00bfff;"></i>
-          <p><strong>E-Mail</strong><br>adresse.email@gmail.com</p>
+          <img></img>
+          <p><strong>E-Mail</strong><br>info@mutiles-voix.com</p>
         </div>
 
         <div class="social-media mt-4">
           <p>Abonnez-vous :</p>
-          <a href="https://www.facebook.com/de.Lorraine.haute.Marne/"><i class="fa fa-facebook fa-lg"></i></a>
-          <a href="#"><i class="fa fa-instagram fa-lg mx-2"></i></a>
-          <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
+          <a href="https://www.facebook.com/de.Lorraine.haute.Marne/"><img class="facebook"></img></a>
         </div>
       </div>
 
